--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <td class="table_detail"> 
                     <div class="table_icon_container">
                     <div class="image_thumbline">
-                        <img src="./images/courtney.png" alt="icon_image">
+                        <img src="./images/Linsday.png" alt="icon_image">
                     </div>
                 </div>
                   <p class="row_detail_1"> Courtney Henry <span>courtney.henry@example.com</span></p></td>
